--- a/sites/all/themes/contrib/jpgio/sass/_config.sass
+++ b/sites/all/themes/contrib/jpgio/sass/_config.sass
@@ -21,7 +21,7 @@
 
 // Bourbon grid display. Comment out to remove display.
 $visual-grid:       true
-$visual-grid-color: #eee
+$visual-grid-color: #ccc
 
 // Set to false if you'd like to remove the responsiveness.
 $responsive:    true
