--- a/sites/all/themes/contrib/jpgio/sass/blocks/_blocks.default.sass
+++ b/sites/all/themes/contrib/jpgio/sass/blocks/_blocks.default.sass
@@ -1,5 +1,32 @@
 // _blocks.default.sass
-//
-// Place all default block styles here.
-// Individual block styles are saved as their own files in the format of
-//  - Example: _blocks.block-id.sass
+
+// Region Colors. delete when starting a new theme.
+
+
+#header, #footer,
+#sidebar-first,
+#sidebar-second,
+#navigation
+  //border: 1px solid
+  //background: rgba(#aaa, 0.2)
+
+
+#header
+  height: 1px
+  margin-bottom: -1px
+
+#footer
+  //border-color: yellow
+
+#sidebar-first
+  margin-top: 50px
+
+#sidebar-second
+  //border-color: blue
+
+#navigation
+  //border-color: green
+  background: rgba(#aaa, 0.2)
+
+.block-webform
+  margin: 0 0 0 30px
