--- a/sites/all/themes/contrib/jpgio/sass/_config.sass
+++ b/sites/all/themes/contrib/jpgio/sass/_config.sass
@@ -20,7 +20,7 @@
 @import "components/neat/neat-helpers"
 
 // Bourbon grid display. Comment out to remove display.
-$visual-grid:       true
+$visual-grid:       false
 $visual-grid-color: #ccc
 
 // Set to false if you'd like to remove the responsiveness.
