--- a/sites/all/themes/contrib/jpgio/sass/style.sass
+++ b/sites/all/themes/contrib/jpgio/sass/style.sass
@@ -2,6 +2,7 @@
 
 // Font styles.
 body
+  background: #2F6FAB
   margin: 0
   // Setting up font size, leading and font family
   //  http://www.markboulton.co.uk/journal/comments/five-simple-steps-to-better-typography
@@ -163,13 +164,6 @@ div.status
   color: #336600
   background: #ccff88
   border-color: #bbee77
-
-// Region Colors. delete when starting a new theme.
-#header, #footer,
-#sidebar-first,
-#sidebar-second,
-#navigation
-  background: rgba(#aaa, 0.2)
 
 // Import custom styles.
 @import _custom.sass
