multisite and features

--- a/sites/all/themes/contrib/jpgio/sass/elements/_full-bg.sass
+++ b/sites/all/themes/contrib/jpgio/sass/elements/_full-bg.sass
@@ -1,5 +1,16 @@
 .page-hero
   padding: 25px
+  background-image: url(../images/source/triangle_pattern.svg), linear-gradient(30deg,#179fff 0,#859088 100%)
+  background-blend-mode: overlay,overlay
+
+  .noise
+    position: absolute
+    background-image: url(../images/source/noise.png)
+    mix-blend-mode: soft-light
+    width: 100%
+    height: 100%
+    left: 0
+    top: 0
 
 .hero-outer,.page-hero
   background-position: top center
