--- a/sites/all/themes/contrib/jpgio/css/style.css
+++ b/sites/all/themes/contrib/jpgio/css/style.css
@@ -216,6 +216,17 @@ html {
 
 .page-hero {
   padding: 25px;
+  background-image: url(../images/source/triangle_pattern.svg), linear-gradient(30deg, #179fff 0, #859088 100%);
+  background-blend-mode: overlay, overlay;
+}
+.page-hero .noise {
+  position: absolute;
+  background-image: url(../images/source/noise.png);
+  mix-blend-mode: soft-light;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
 
 .hero-outer, .page-hero {
